--- a/frontend/styles/product_details.css
+++ b/frontend/styles/product_details.css
@@ -7,6 +7,9 @@ body{
     justify-content: center;
     align-items: center;
     font-family: 'Inter', sans-serif;
+    i {
+        font-size: large;
+    }
 }
 
 .product-img-section{
@@ -14,20 +17,17 @@ body{
     min-width: 0;
     display: flex;
     flex-direction: column;
-    justify-content: start;
-    align-items: flex-start;
+    justify-content: center;
     padding: 1%;
 }
+
 
 /* product title desc and brand section*/
 
 .product-head{
-    border: solid;
     padding: 0;
     margin: 0;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
+    display: block;
     align-items: start;
     h4{
         margin: 0;
@@ -68,6 +68,8 @@ body{
         max-height: 300px;
         border-radius: 8px;
     }
+
+
 }
 
 .img-holder{
@@ -83,6 +85,16 @@ body{
 }
 .img-dots .active{
     color: gray;
+}
+
+#swap-right-btn, #swap-left-btn{
+    color: black;
+    font-size: 4dvh;
+}
+
+#swap-left-btn:hover, #swap-right-btn:hover{
+    color: #777777;
+    cursor: pointer;
 }
 
 
