--- a/frontend/styles/product_details.css
+++ b/frontend/styles/product_details.css
@@ -30,12 +30,12 @@ footer{
 .divider {
     background: gray;
     display: flex;
-    position: absolute;
+    position: relative;
     left: 0;
     width: 100%;
     border: none;
     border-top: 1px solid #ccc;
-    margin: 0;
+    margin-top: -10px;
 }
 
 /*header content css stuff , ( CANT BELIEVE IM REPEATING THIS )*/
@@ -156,7 +156,7 @@ h4 {
 
 .product-head{
     padding: 0;
-    margin: 0;
+    margin-bottom: 9px;
     align-items: start;
     h4{
         margin: 0;
@@ -190,14 +190,9 @@ h4 {
     margin: 40px;
     align-items: center;
     align-self: center;
-    height: 400px;
-    width: 400px;
-
-    img{
-        max-width: 500px;
-        max-height: 300px;
-        height: 100%;
-        border-radius: 6px;
+    img {
+        height: 350px;
+        width: 350px;
     }
 }
 
@@ -209,7 +204,6 @@ h4 {
     align-items: center;
 }
 
-/* Replace .dot styles with these */
 .img-dots {
     display: flex;
     justify-content: center;
@@ -258,30 +252,49 @@ h4 {
 .color-options{
     display: flex;
     overflow-x: scroll;
+    margin-left: 10px;
 }
 .color-btn {
     width: 30px;    
     height: 30px;
-    margin: 3px;
-    padding: 15px;  
-    border: 4px solid transparent;
+    margin: 5px 5px 10px;
+    border: 3px solid transparent;
     border-radius: 50%;
     cursor: pointer;
-    transition: transform 0.2s;
+    transition: all 0.2s;
+    box-sizing: border-box;
+    padding: 10px;
 }
   
 .color-btn:hover {
-    transform: scale(1.1);
+    transform: scale(1.01);
 }
-  
+
 .color-btn.selected {
-    border-color: black;
+    transform: scale(1.2);
+    padding: 3px;
+    border-color: #000000;
+}
+
+.color-selection{
+    margin: 10px 4px 10px 4px;
+}
+.current-selection {
+    margin: 10px 0;
+    font-weight: 700;
+    font-size: 1.1rem;
+}
+.current-selected-color {
+    transition: color 0.3s ease;
 }
 
 /* options buttons*/
+.options-btns-sec{
+    margin: 0;
+}
 
-.options-btns button{
-    margin: 10px 3px;
+.options-btns-sec button{
+    margin: 10px 15px;
     margin-left: 5px;
     padding: 10px 20px;
     cursor: pointer;
@@ -293,15 +306,175 @@ h4 {
     border: solid 2px gray;
     border-radius: 20px;
 }
-.category-btn:hover {
+.opt-btn:hover {
     background-color: #f3f3f3;
     color: black;
 }
-.category-btn:active {
+.opt-btn:active {
     background-color: #e0e0e0;
     color: black;
 }
-.category-btn.active {
+.opt-btn.active {
     color: white;
     background-color: black;
+}
+
+.product-specs-section{
+    margin: 0;
+    h3 {
+        margin: 5px;
+    }
+}
+
+.spec-desc{
+    margin: 15px;
+}
+
+.spec-desc .price{
+    font-weight: bold;
+    color: crimson;
+}
+
+.cart-add-btn{
+    margin: 15px;
+    border-radius: 0;
+    border: none;
+    background-color: crimson;
+    color: white;
+    font-weight: bold;
+    font-size: 1.2rem;
+    align-items: center;
+    min-height: 6dvh;
+    i {
+        padding: 10px;
+        font-size: 1.3rem;
+    }
+}
+
+.cart-add-btn:hover{
+    cursor: pointer;
+    background-color: rgb(148, 21, 46);
+}
+
+
+
+/* Sidebar styles */
+.cart-sidebar {
+    position: fixed;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    top: 0;
+    right: -500px;
+    min-width: 300px;
+    height: 100%;
+    background-color: #f4f4f4;
+    box-shadow: -2px 0 5px rgba(0, 0, 0, 0.5);
+    overflow-y: auto;
+    transition: right 0.3s ease;
+    z-index: 1000;
+}
+.cart-sidebar h2 {
+    margin-left: 10px;
+}
+
+.cart-sidebar.open {
+    right: 0;
+}
+.top-sidebar-section{
+    display: flex;
+    flex-direction: column;
+}
+
+
+.close-btn {
+    margin-right: 20px;
+    min-width: 30   px;
+    font-size: 1.4rem;
+    background-color: transparent;
+    color: black;
+    border: none;
+}
+.close-btn:hover {
+    background-color: #b5b5b5;
+    color: black;   
+    cursor: pointer;
+}
+
+.cart-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: row;
+}
+
+
+.carted-products-col{
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    overflow-y: scroll;
+    align-items: start;
+    padding: 0;
+    margin-top: 15px;
+}
+
+.cart-item{
+    background-color: transparent;
+    display: flex;
+    flex-direction: row;
+    justify-content: start;
+    align-items: flex-start;
+    border-radius: 8px;
+    padding: 5px;
+    text-align: right;
+    img {   
+        min-width: 100px;
+        max-height: 110px;
+        border-radius: 8px;
+    }
+}
+
+.cart-item-details{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: start;
+    gap: 10px;
+    padding: 10px;
+    .cart-item-name, .cart-item-quant{
+        font-weight: bolder;
+        font-size: 95%;
+    }
+}
+
+#cart-total{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    p {
+        margin: 5px 15px 0px;
+        font-weight: bolder;
+    }
+}
+#cart-total .price{
+    color: crimson;
+    font-weight: bolder;
+}
+.bottom-sidebar-section .checkout-btn{
+    margin: 15px;
+    border-radius: 0;
+    border: none;
+    background-color: crimson;
+    color: white;
+    font-weight: bold;
+    font-size: 2dvh;
+    min-height: 6dvh;
+}
+
+.bottom-sidebar-section{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
