finished products AND dashboard for admin , WAITING FOR AKRAM TO FINISH PRODUCTS DESIGN PLUS BUTTON

--- a/frontend/part 1/styles/styles.css
+++ b/frontend/part 1/styles/styles.css
@@ -22,7 +22,7 @@ footer{
 .divider {
     background: gray;
     display: flex;
-    position: absolute;
+    position: relative;
     left: 0;
     width: 100%;
     border: none;
