--- a/frontend/part 2/styles/dashboard.css
+++ b/frontend/part 2/styles/dashboard.css
@@ -79,49 +79,19 @@ h4 {
     border-radius: 4px;
     box-sizing: border-box;
 }
-.header-content button {
-    display: inline-flex;
-    transition: all 0.2s;
-    align-items: center;
-    justify-content: center;
-    gap: 10px;
-    padding: 1rem 1.2rem;
-    max-width: 150px;
-    font: 700 1.2rem 'Inter', sans-serif;
-    line-height: 1;
-    border: 0;
-    cursor: pointer;
-}
-.products-add-btn {
-    border-radius: 0;
-    background-color: crimson;
-    color: white;
-    border: 1px solid #121212;
-    margin-right: 10px;
-    padding: 0.5rem 1rem;
-    font-size: 1rem;
-    flex-shrink: 0;
-    max-width: 200px;
-    width: auto;
-    text-align: center;
-    border-radius: 5px;
-    box-sizing: border-box;
-}
-.products-add-btn:hover{
-    background-color: rgb(148, 21, 46);
-}
+
 
 .profile-btn{
     border: 3px solid transparent;
-    background-image: url("../../assets/images/profile-pic-from-google.jpg");
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
     border-radius: 50%;
     width: 50px;
+    height: 50px;
     cursor: pointer;
     transition: all 0.2s;
     box-sizing: border-box;
+    background-image: url("../../assets/images/profile-pic-from-google.jpg");
+    background-size: cover;
+    background-position: center;
     padding: 10px;
     margin: 0 10px;
 }
@@ -166,6 +136,38 @@ h4 {
     background-color: red;
     border-radius: 2px;
 }
+
+.statistics{
+    display: flex;
+    background-color: #f6f6f6;
+    flex-direction: row;
+    justify-content: space-around;
+
+    h3{
+        margin: 10px 20px;
+        color: crimson;
+    }
+}
+.stat-card .header{
+    display: flex;
+    flex-direction: row;
+    min-width: 300px;
+    justify-content: space-between;
+    margin: 0 10px;
+    padding: 0 10px;
+    i{
+        font-size: 1.4rem;
+        align-self: center;
+    }
+}
+.stat-card{
+    border: 1px solid #ddd;
+    background-color: white;
+    margin: 20px;
+    border-radius: 4px;
+}
+
+
 
 .category-btn{
     margin: 20px 5px;
