i added filter and search and components rendering dynamic

--- a/frontend/part 1/styles/product_details.css
+++ b/frontend/part 1/styles/product_details.css
@@ -251,7 +251,7 @@ h4 {
 
 .color-options{
     display: flex;
-    overflow-x: scroll;
+    overflow-x: auto;
     margin-left: 10px;
 }
 .color-btn {
