--- a/frontend/part 1/styles/styles.css
+++ b/frontend/part 1/styles/styles.css
@@ -142,7 +142,11 @@ h4 {
 .nav-bar {
     display: flex;
     justify-content: left;
-    margin-top: 15px;
+    padding-top: 15px;
+    height: 50px;
+}
+.nav-bar div{
+    padding-bottom:10px ;
 }
 
 .tab {
@@ -247,13 +251,23 @@ h4 {
 .product-card {
     background-color: #f9f9f9;
     position: relative;
+    height: 600px;
     border: 1px solid #ddd;
     border-radius: 8px;
     padding: 20px;
     text-align: left;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     transition: transform 0.2s, box-shadow 0.2s;
+    opacity: 0;
+  transform: translateY(40px);
+  animation: fadeInUp 2s ease forwards;
 }
+@keyframes fadeInUp {
+    to {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
 .product-card .product-name {
     font-size: 1.2rem;
     font-weight: bold;
@@ -297,10 +311,10 @@ h4 {
 
 .products-grid .product-card .product-image {
     width: 100%;
-    height: auto;
-    max-width: 800px;
-    max-height: 400px;
-    object-fit: cover;
+    height: 400px;
+    max-width: 300px;
+    
+    
     border-radius: 8px;
 }
 
