--- a/frontend/part 1/styles/checkout.css
+++ b/frontend/part 1/styles/checkout.css
@@ -334,7 +334,161 @@ body{
     display: flex;
     flex-direction: column;
     gap: 20px;
-    max-height: 400px; /* or whatever you need */
+    max-height: 400px; 
   overflow-y: auto;
   padding-right: 8px;
 }
+
+/* adress css*/
+.address-modal {
+    position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.4);
+  display: none;
+  align-items: center;
+  justify-content: center;
+  z-index: 999;
+  }
+  .address-container {
+    background-color: white;
+    width: 100%; 
+    max-width: 800px;    
+    min-width: 300px;     
+    padding: 20px;
+    border-radius: 12px;
+   
+   
+    overflow-y: auto;
+    max-height: 90vh;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+  }
+  .close{
+    display: flex;
+    justify-content: space-between;
+   
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
+  
+  .close-modal {
+    
+    top: 12px;
+    right: 16px;
+    font-size: 24px;
+    background: none;
+    border: none;
+    color: #333;
+    cursor: pointer;
+  }
+h1{
+    font-weight: bold;
+    font-size: 30px;
+}
+.country-container{
+    border-bottom:0.5px solid rgb(216, 216, 216) ;
+    padding-bottom: 20px;
+}
+#country-select{
+    width: 45%;
+    height: 40px;
+    border-radius: 8px;
+    padding: 0 10px;
+    margin: 15px 0;
+
+}
+.contact-info{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    border-bottom:0.5px solid rgb(216, 216, 216) ;
+    padding-bottom: 20px;
+    
+
+}
+.name{
+    width: 45%;
+    height: 40px;
+    border-radius: 8px;
+    padding: 0 10px;
+    border: 0.5px solid rgb(216, 216, 216) ;
+    margin: 15px 0;
+
+}
+.name-phone{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 15px;
+}
+.contact-info p{
+    margin-top: 3px;
+    margin-left: 3px;
+    font-size: 10px;
+    font-weight: 400;
+}
+.phone-number{
+    width: 45%;
+    height: 40px;
+    border-radius: 8px;
+    padding: 0 10px;
+    border: 0.5px solid rgb(216, 216, 216) ;
+    margin: 15px 0;
+
+}
+.Address{
+    
+    border-bottom:0.5px solid rgb(216, 216, 216) ;
+    padding-bottom: 20px;
+    margin-bottom: 30px;
+
+}
+.two-inputs{
+    display: flex;
+    justify-content: space-between;
+    margin: 20px 0;
+    gap: 15px;
+    flex-wrap: wrap;
+   
+}
+.two-inputs input{
+    width: 45%;
+    height: 40px;
+    border-radius: 8px;
+    padding: 0 10px;
+    border: 0.5px solid rgb(216, 216, 216) ; 
+
+}
+.three-inputs{
+    display: flex;
+    justify-content: space-between;
+    margin: 20px 0;
+    flex-wrap: wrap;
+    gap: 15px;
+}
+.three-inputs input{
+    width: 28%;
+    height: 40px;
+    border-radius: 8px;
+    padding: 0 10px;
+    border: 0.5px solid rgb(216, 216, 216) ;
+}
+button{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-self: end;
+    width: 14%;
+    height: 35px;
+    font-weight: bold;
+    font-size: 18px;
+    background-color: rgba(195, 28, 28, 1);
+    color: white;
+    border: none;
+    border-radius:8px ;
+}
+
