--- a/frontend/part 1/styles/product_details.css
+++ b/frontend/part 1/styles/product_details.css
@@ -242,12 +242,11 @@ h4 {
     flex: 1;
     display: flex;
     flex-direction: column;
-    justify-content: start;
-    min-width: 0;
+    justify-content: space-between;
+    gap: 30px;
     align-self: start;
 }
 
-/* color btns*/
 
 .color-options{
     display: flex;
@@ -272,7 +271,7 @@ h4 {
 
 .color-btn.selected {
     transform: scale(1.2);
-    padding: 3px;
+    padding: 5px;
     border-color: #000000;
 }
 
@@ -286,11 +285,14 @@ h4 {
 }
 .current-selected-color {
     transition: color 0.3s ease;
+    
 }
 
 /* options buttons*/
 .options-btns-sec{
     margin: 0;
+    
+
 }
 
 .options-btns-sec button{
@@ -300,10 +302,12 @@ h4 {
     cursor: pointer;
     background-color: white;
     color: black;
+    font-family: 'Inter', sans-serif;
     font-weight: bold;
+    font-size: 15px;
     position: relative;
     transition: color 0.3s;
-    border: solid 2px gray;
+    border: solid 2px black;
     border-radius: 20px;
 }
 .opt-btn:hover {
