--- a/frontend/part 1/styles/shop.css
+++ b/frontend/part 1/styles/shop.css
@@ -263,16 +263,18 @@ h4 {
     background-color: black;
 }
 
-/* Product Card Styles */
+
 
 .products-grid {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 20px;
     padding: 20px;
-    justify-items: center;
+    justify-items: start;
     align-items: start;
+    border: none;
 }
+
 
 .product-card {
     background-color: #f9f9f9;
@@ -280,6 +282,7 @@ h4 {
     border: 1px solid #ddd;
     border-radius: 8px;
     padding: 20px;
+    height: 600px;
     text-align: left;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     transition: transform 0.2s, box-shadow 0.2s;
@@ -335,10 +338,10 @@ h4 {
 
 .products-grid .product-card .product-image {
     width: 100%;
-    height: auto;
+    height: 400px;
     max-width: 800px;
     max-height: 400px;
-    object-fit: cover;
+    object-fit: fill;
     border-radius: 8px;
 }
 
