--- a/frontend/part 1/styles/styles.css
+++ b/frontend/part 1/styles/styles.css
@@ -1,15 +1,52 @@
-body , html{
-    
+body,
+html {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    flex-shrink: 1; 
+    flex-shrink: 1;
     overflow-x: hidden;
-    font-family: 'Inter', sans-serif;
+    font-family: "Inter", sans-serif;
 }
 
+.quantity {
+    align-self:end;
+    display: flex;
+    gap: 15px;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(225, 223, 223);
+    border-radius: 6px;
+    width: 80px;
+    height: 20px;
+    
+}
 
-footer{
+.minus {
+    color: rgba(195, 28, 28, 1);
+    font-size: 20px;
+    font-weight: bold;
+    border: none;
+    background: none;
+    outline: none;
+    cursor: pointer;
+}
+
+.add {
+    color: rgba(195, 28, 28, 1);
+    font-size: 20px;
+    font-weight: bold;
+    border: none;
+    background: none;
+    outline: none;
+    cursor: pointer;
+}
+
+.quantity p {
+    font-size: bold;
+    font-size: 16px;
+}
+
+footer {
     position: relative;
     bottom: 0;
     left: 0;
@@ -30,7 +67,8 @@ footer{
     border-top: 1px solid #ccc;
     margin: 0;
 }
-.product-card .card-divider{
+
+.product-card .card-divider {
     color: #ccc;
     font-size: 0.8rem;
     position: absolute;
@@ -63,16 +101,17 @@ h4 {
     padding: 10px;
     gap: 10px;
 }
-.header-content .icon{
+
+.header-content .icon {
     height: 120px;
-    width: 150px; 
+    width: 150px;
 }
 
-.search-container{
+.search-container {
     flex: 1;
     min-width: 0;
 }
-  
+
 .search-field {
     flex: 1;
     flex-grow: 1;
@@ -95,7 +134,7 @@ h4 {
     gap: 10px;
     padding: 1rem 1.2rem;
     max-width: 150px;
-    font: 700 1.2rem 'Inter', sans-serif;
+    font: 700 1.2rem "Inter", sans-serif;
     line-height: 1;
     border: 0;
     border-radius: 2px;
@@ -116,7 +155,8 @@ h4 {
     border-radius: 5px;
     box-sizing: border-box;
 }
-.cart-button{
+
+.cart-button {
     background-color: crimson;
     color: white;
     border: 1px solid #121212;
@@ -131,11 +171,12 @@ h4 {
     box-sizing: border-box;
 }
 
-.sign-in:hover{
+.sign-in:hover {
     background-color: #f3f3f3;
     color: black;
 }
-.cart-button:hover{
+
+.cart-button:hover {
     background-color: rgb(148, 21, 46);
 }
 
@@ -145,8 +186,9 @@ h4 {
     padding-top: 15px;
     height: 50px;
 }
-.nav-bar div{
-    padding-bottom:10px ;
+
+.nav-bar div {
+    padding-bottom: 10px;
 }
 
 .tab {
@@ -158,11 +200,13 @@ h4 {
     position: relative;
     transition: color 0.3s;
 }
+
 .tab:hover {
     background-color: #f3f3f3;
     border-radius: 4px;
     color: black;
 }
+
 .tab:active {
     background-color: #e0e0e0;
     color: black;
@@ -185,7 +229,7 @@ h4 {
     border-radius: 2px;
 }
 
-.category-btn{
+.category-btn {
     margin: 10px 3px;
     margin-left: 5px;
     padding: 10px 20px;
@@ -198,20 +242,24 @@ h4 {
     border: solid 2px gray;
     border-radius: 20px;
 }
+
 .category-btn:hover {
     background-color: #f3f3f3;
     color: black;
+    
 }
+
 .category-btn:active {
     background-color: #e0e0e0;
     color: black;
 }
+
 .category-btn.active {
     color: white;
     background-color: black;
 }
 
-.brand-btn{
+.brand-btn {
     margin: 10px 3px;
     margin-left: 5px;
     padding: 10px 20px;
@@ -224,14 +272,17 @@ h4 {
     border: solid 2px gray;
     border-radius: 20px;
 }
+
 .brand-btn:hover {
     background-color: #f3f3f3;
     color: black;
 }
+
 .brand-btn:active {
     background-color: #e0e0e0;
     color: black;
 }
+
 .brand-btn.active {
     color: white;
     background-color: black;
@@ -259,34 +310,41 @@ h4 {
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     transition: transform 0.2s, box-shadow 0.2s;
     opacity: 0;
-  transform: translateY(40px);
-  animation: fadeInUp 2s ease forwards;
+    transform: translateY(40px);
+    animation: fadeInUp 2s ease forwards;
 }
+
 @keyframes fadeInUp {
     to {
-      opacity: 1;
-      transform: translateY(0);
+        opacity: 1;
+        transform: translateY(0);
     }
-  }
+}
+
 .product-card .product-name {
     font-size: 1.2rem;
     font-weight: bold;
     color: #333;
     margin-bottom: 5px;
 }
-.product-price, .product-desc , .product-instal-price{
+
+.product-price,
+.product-desc,
+.product-instal-price {
     display: block;
     font-size: 0.9rem;
     margin-bottom: 10px;
 }
-.product-desc{
+
+.product-desc {
     background: linear-gradient(to right, #ff8a00, #e52e71);
     -webkit-background-clip: text;
     background-clip: text;
     font-weight: 800;
     color: transparent;
 }
-.product-price{
+
+.product-price {
     margin-bottom: 10px;
     display: block;
     text-align: right;
@@ -294,7 +352,8 @@ h4 {
     color: #121212;
     font-size: 0.9rem;
 }
-.product-instal-price{
+
+.product-instal-price {
     margin-bottom: 10px;
     display: block;
     text-align: right;
@@ -313,8 +372,7 @@ h4 {
     width: 100%;
     height: 400px;
     max-width: 300px;
-    
-    
+
     border-radius: 8px;
 }
 
@@ -345,6 +403,7 @@ h4 {
     transition: right 0.3s ease;
     z-index: 1000;
 }
+
 .cart-sidebar h2 {
     margin-left: 10px;
 }
@@ -352,23 +411,24 @@ h4 {
 .cart-sidebar.open {
     right: 0;
 }
-.top-sidebar-section{
+
+.top-sidebar-section {
     display: flex;
     flex-direction: column;
 }
 
-
 .close-btn {
     margin-right: 20px;
-    min-width: 30   px;
+    min-width: 30 px;
     font-size: 1.4rem;
     background-color: transparent;
     color: black;
     border: none;
 }
+
 .close-btn:hover {
     background-color: #b5b5b5;
-    color: black;   
+    color: black;
     cursor: pointer;
 }
 
@@ -379,18 +439,17 @@ h4 {
     flex-direction: row;
 }
 
-
-.carted-products-col{
+.carted-products-col {
     display: flex;
     flex-direction: column;
     justify-content: start;
-    overflow-y: scroll;
     align-items: start;
     padding: 0;
     margin-top: 15px;
+    width:350px
 }
 
-.cart-item{
+.cart-item {
     background-color: transparent;
     display: flex;
     flex-direction: row;
@@ -399,41 +458,99 @@ h4 {
     border-radius: 8px;
     padding: 5px;
     text-align: right;
-    img {   
-        min-width: 100px;
-        max-height: 110px;
-        border-radius: 8px;
-    }
-}
 
-.cart-item-details{
+    
+}
+.cart-item img {
+    width:100px;
+    height: 110px;
+    object-fit: fill;
+    
+    border-radius: 8px;
+}
+.cart-item-details {
     display: flex;
+    width:200px;
     flex-direction: column;
     justify-content: space-between;
     align-items: start;
-    gap: 10px;
+    gap: 5px;
     padding: 10px;
-    .cart-item-name, .cart-item-quant{
+    
+
+    
+    .cart-item-quant {
         font-weight: bolder;
         font-size: 95%;
+        text-overflow: ellipsis;
     }
 }
 
-#cart-total{
+.cart-item-details .cart-item-quant {
+    font-weight: bolder;
+    font-size: 95%;
+    text-overflow: ellipsis;
+     white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 180px;
+  display: block;  
+
+
+}
+.cart-item-name {
+    font-weight: bolder;
+    font-size: 95%;
+    text-overflow: ellipsis;
+     white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 180px;
+  display: block;  
+
+
+}
+
+.name-phone{
+  width :150px;
+  
+}
+.name-delete{
+    display: flex;
+    flex-direction: row;
+    width: 200px;
+    justify-content: space-between;
+    gap: 20px;
+    text-overflow: ellipsis;
+}
+.name-delete i{
+    margin-top: 5px;
+    color:rgba(195, 28, 28, 1);
+    cursor:pointer;
+    justify-self:end;
+}
+.name-delete i:hover{
+      color: crimson;   
+}
+
+#cart-total {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+
     p {
         margin: 5px 15px 0px;
         font-weight: bolder;
     }
 }
-#cart-total .price{
+
+#cart-total .price {
     color: crimson;
     font-weight: bolder;
 }
-.bottom-sidebar-section .checkout-btn{
+
+.bottom-sidebar-section .checkout-btn {
     margin: 15px;
     border-radius: 0;
     border: none;
@@ -442,15 +559,14 @@ h4 {
     font-weight: bold;
     font-size: 2dvh;
     min-height: 6dvh;
+    cursor: pointer;
 }
 
-.bottom-sidebar-section{
+.bottom-sidebar-section {
     display: flex;
     flex-direction: column;
     justify-content: center;
-
 }
-
 
 /* start from cart item cards tomorrow.
 NEED TO SET CHECKOUT ITEMS AT THE BOTTOM OF THE COLUMN + USE COLUMN LAYOUT FOR THE CART DETAILS
