--- a/frontend/part 1/styles/checkout.css
+++ b/frontend/part 1/styles/checkout.css
@@ -146,17 +146,19 @@ body{
    border-radius: 12px;
 }
 .img{
-    padding:10px 0px;
+    padding:15px 15px;
 }
 .img img{
- height: 200px;
- width: 200px;   
+ height: 150px;
+ width: 150px;   
 }
 .info-device{
     padding:10px 0px;
     display: flex;
     flex-direction: column;
     gap: 10px;
+    width: 200px;
+    overflow: hidden;
     
 }
 .info-device h2{
@@ -175,7 +177,7 @@ body{
     color: rgba(195, 28, 28, 1);
 }
 .quan{
-    padding-left: 25%;
+    padding-left: 35%;
     padding-top: 7%;
     align-self: center;
     display: flex;
