--- a/frontend/part 1/styles/product_details.css
+++ b/frontend/part 1/styles/product_details.css
@@ -583,3 +583,36 @@ h4 {
     font-size: bold;
     font-size: 16px;
 }
+.cart-empty {
+    position: absolute; 
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    height: auto;
+}
+
+.empty {
+    padding-right: 25px;
+    width: 80%; 
+    height: auto;
+    object-fit: contain;
+    display: block;
+}
+
+.text1 {
+    font-weight: bold;
+    margin-top: 15px;
+    font-size: 1.2rem;
+}
+
+.text2 {
+    margin-top: 10px;
+    font-weight: 400;
+    color: #8a8a8a;
+    font-size: 0.95rem;
+}
