--- a/frontend/part 2/styles/products.css
+++ b/frontend/part 2/styles/products.css
@@ -28,7 +28,7 @@ body , html{
     max-width: 800px; 
     max-height: 90vh; 
     overflow-y: auto; 
-    padding: 0; 
+    padding: 0;
     margin: 0; 
     overflow-x: hidden;
   }
@@ -48,8 +48,9 @@ body , html{
     float: right;
     font-size: 20px;
     cursor: pointer;
-    margin-bottom: 10px;
-  }
+    padding: 10px;
+    margin: 10px;
+}
   
 
 footer{
