--- a/frontend/part 2/styles/dashboard.css
+++ b/frontend/part 2/styles/dashboard.css
@@ -139,9 +139,9 @@ h4 {
 
 .statistics{
     display: flex;
-    background-color: #f6f6f6;
+    background-color: #fbfbfb;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-between;
 
     h3{
         margin: 10px 20px;
@@ -165,6 +165,7 @@ h4 {
     background-color: white;
     margin: 20px;
     border-radius: 4px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.15);
 }
 
 
