--- a/frontend/part 2/styles/users.css
+++ b/frontend/part 2/styles/users.css
@@ -52,26 +52,26 @@ h4 {
 
 .header-content {
     display: flex;
-    justify-content: space-evenly;
+    flex-direction: row;
     align-items: center;
-    
-    
+    padding: 10px;
+    gap: 10px;
 }
 .header-content .icon{
     height: 120px;
-    width: 20%; 
+    width: 150px; 
 }
 
 .search-container{
- width: 100%;   
- margin-left: 8%;
+    flex: 1;
+    min-width: 0;
 }
   
 .search-field {
     flex: 1;
     flex-grow: 1;
     height: 50px;
-    width: 80%;
+    width: 100%;
     display: flex;
     padding: 0.5rem 1rem;
     font-size: 1rem;
@@ -93,7 +93,7 @@ h4 {
     background-size: cover;
     background-position: center;
     padding: 10px;
-    margin-right:5%;
+    margin: 0 10px;
 }
 
 .nav-bar {
@@ -101,10 +101,7 @@ h4 {
     justify-content: left;
     margin-top: 15px;
 }
-.nav-bar div{
-    
-    padding-bottom: 18px;
-}
+
 .tab {
     margin: 0px 10px 0px;
     padding: 10px 20px;
@@ -279,7 +276,6 @@ h3{
     padding: 10px;
 }
 
-
 .delete-product-btn:hover{
     transform: scale(1.1);
     cursor: pointer;
@@ -295,19 +291,19 @@ h3{
 }
   
 .status-badge.inactive {
-    background-color: #ebf8f2;
+    background-color: #ffcaca;
     color: #f44040;
 }
- .status-badge.admin{
+.status-badge.admin{
     background-color: rgba(217, 243, 255, 1);
     color: rgba(124, 162, 255, 1);
- } 
-.status-badge.pending {
-    background-color: #feebc8;
-    color: #b7791f;
 }
-  
-.status-badge.cancelled {
-    background-color: #fed7d7;
-    color: #c53030;
+.status-badge.user{
+    background-color: rgb(255, 236, 181);
+    color: rgb(253, 203, 0);
+}
+.status-dropdown, .role-dropdown {
+    padding: 4px 8px;
+    font-size: 0.9rem;
+    border-radius: 4px;
 }
