--- a/frontend/part 2/styles/addform.css
+++ b/frontend/part 2/styles/addform.css
@@ -169,7 +169,7 @@ h2{
 
 }
 .save-color {
-  width: 23%;
+  width: 14%;
   height: 35px;
   border: none;
   border-radius: 8px;
@@ -178,6 +178,13 @@ h2{
   font-weight: bold;
   font-size: 16px;
   cursor: pointer;
+  
+}
+.savecol{
+    display: flex;
+    justify-content: end;
+    margin-bottom: 10px;
+    margin-right: 45px;
 }
 .save-color:hover{
     background-color:rgb(136, 4, 4) ;
@@ -262,18 +269,12 @@ h3{
     flex-wrap: wrap;
     gap: 5px;
 }
-.barier{
-
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
+.barier {
+    display: inline-flex;
     align-items: center;
-height: 37px;
-width: 37px;
-
-border-radius: 50%;
-
-}
+    justify-content: center;
+    margin: 5px;
+  }
 .color-1{
 background-color: rgba(217, 217, 217, 1);
 height: 30px;
